Ajout backend + frontend, routes auth, JWT et Swagger

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://thomas:mycontacts.efrei@cluster0.ra2fdor.mongodb.net/
 PORT=4000
-JWT_SECRET=monSuperSecret
+JWT_SECRET=MaCléCaché
 JWT_EXPIRES_IN=1h
